<resources>
    <string name="app_name">ServiceTest</string>

    <string name="manage_started_service_title">Manage STARTED service</string>
    <string name="manage_bound_service_title">Manage BOUND service</string>
    <string name="manage_scheduled_service_title">Manage SCHEDULED service</string>

    <string name="rx_service_title">Rx background service</string>
    <string name="send_wrong_broadcast">Send wrong broadcast</string>
    <string name="handler_service_title">Handler background service</string>
    <string name="foreground_service_title">Foreground service</string>
    <string name="foreground_and_wrong_background_service_title">Background + background</string>

    <string name="start_rx_service_button">Start</string>
    <string name="start_wrong_rx_service_button">Start</string>
    <string name="stop_rx_service_button">Stop</string>
    <string name="start_handler_service_button_with_loop">Start\nwith loop</string>
    <string name="start_handler_service_button_normal">Start\nnormal</string>
    <string name="stop_handler_service_button">Stop</string>

    <string name="get_message_from_bound_service_button">Get message</string>
    <string name="bound_service_button">Bound</string>
    <string name="unbound_service_button">Unbound</string>

    <string name="start_foreground_wrong_service_button">Start wrong service</string>
    <string name="stop_foreground_wrong_service_button">Stop wrong service</string>
    <string name="start_foreground_correct_service_button">Start correct service</string>
    <string name="stop_foreground_correct_service_button">Stop correct service</string>

    <string name="kill_process_button">Kill process</string>
    <string name="dummy_content">CHOOSE\nYOUR\nDESTINY</string>
</resources>
