<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:minHeight="40dp"
        android:padding="10dp"
        android:text="@string/rx_service_title"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/colorBlueDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_rx_service_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:minHeight="40dp"
            android:padding="10dp"
            android:text="@string/start_rx_service_button"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stop_rx_service_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:minHeight="40dp"
            android:padding="10dp"
            android:text="@string/stop_rx_service_button"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/colorBlueDark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:minHeight="40dp"
        android:padding="10dp"
        android:text="@string/handler_service_title"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/colorBlueDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_handler_service_with_loop_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:minHeight="40dp"
            android:padding="10dp"
            android:text="@string/start_handler_service_button_with_loop"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/start_handler_service_normal_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:minHeight="40dp"
            android:padding="10dp"
            android:text="@string/start_handler_service_button_normal"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stop_handler_service_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:minHeight="40dp"
            android:padding="10dp"
            android:text="@string/stop_handler_service_button"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/colorBlueDark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:minHeight="40dp"
        android:padding="10dp"
        android:text="@string/foreground_service_title"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/colorBlueDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_foreground_wrong_service_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:minHeight="40dp"
            android:padding="10dp"
            android:text="@string/start_foreground_wrong_service_button"
            android:textAllCaps="true"
            android:textColor="@color/colorGreenDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stop_foreground_wrong_service_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:minHeight="40dp"
            android:padding="10dp"
            android:text="@string/stop_foreground_wrong_service_button"
            android:textAllCaps="true"
            android:textColor="@color/colorGreenDark"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_foreground_correct_service_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:minHeight="40dp"
            android:padding="10dp"
            android:text="@string/start_foreground_correct_service_button"
            android:textAllCaps="true"
            android:textColor="@color/colorGreenDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stop_foreground_correct_service_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:minHeight="40dp"
            android:padding="10dp"
            android:text="@string/stop_foreground_correct_service_button"
            android:textAllCaps="true"
            android:textColor="@color/colorGreenDark"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:minHeight="40dp"
        android:padding="10dp"
        android:text="@string/foreground_and_wrong_background_service_title"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/colorBlueDark" />

    <TextView
        android:id="@+id/start_background_wrong_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:gravity="center"
        android:minHeight="40dp"
        android:padding="10dp"
        android:text="@string/start_wrong_rx_service_button"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

</LinearLayout>